--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
     </header>
     <main>
       <section>
+        <p><a href="/authentication">Authentication ページへ</a></p>
         <div id="status">WebSocket: connecting…</div>
         <pre id="log" class="log"></pre>
       </section>
