FEAT: APIトークン認証とレートリミッターを追加。セキュリティヘッダーを強化し、WebSocket接続時のトークン検証を実装。クライアント側でのトークン管理を改善。

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
       <section>
         <p><a href="/authentication">Authentication ページへ</a></p>
         <div id="status">WebSocket: connecting…</div>
+        <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
         <pre id="log" class="log"></pre>
       </section>
     </main>
