--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,11 @@
     </header>
     <main>
       <section>
-        <p><a href="/authentication">Authentication ページへ</a></p>
+        <p>
+          <a href="/authentication">Authentication</a> |
+          <a href="/headset">Headset</a> |
+          <a href="/pow">Frequency Band (pow)</a>
+        </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
         <pre id="log" class="log"></pre>
