FEAT: モーションストリームの制御APIを追加し、モーションページを作成。CortexClientの互換性を保ちながらデータをブロードキャストし、関連するテストを追加。

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,8 @@
         <p>
           <a href="/authentication">Authentication</a> |
           <a href="/headset">Headset</a> |
-          <a href="/pow">Frequency Band (pow)</a>
+          <a href="/pow">Frequency Band (pow)</a> |
+          <a href="/motion">Motion (mot)</a>
         </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
