FEAT: デバイス情報ページとストリーム制御APIを追加。デバイス情報の取得と表示を行うHTMLおよびJavaScriptを実装し、関連するテストを追加。

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,8 @@
           <a href="/authentication">Authentication</a> |
           <a href="/headset">Headset</a> |
           <a href="/pow">Frequency Band (pow)</a> |
-          <a href="/motion">Motion (mot)</a>
+          <a href="/motion">Motion (mot)</a> |
+          <a href="/device_information">Device Information (dev)</a>
         </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
