--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,8 @@
           <a href="/pow">Frequency Band (pow)</a> |
           <a href="/motion">Motion (mot)</a> |
           <a href="/device_information">Device Information (dev)</a> |
-          <a href="/EEG_Quality">EEG Quality (eq)</a>
+          <a href="/EEG_Quality">EEG Quality (eq)</a> |
+          <a href="/Performance_metric">Performance Metric (met)</a>
         </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
