FEAT: 表情ストリーム(fac)の制御APIを追加し、関連するHTMLおよびJavaScriptを実装。表情ページを作成し、テストを追加。

--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,8 @@
           <a href="/device_information">Device Information (dev)</a> |
           <a href="/EEG_Quality">EEG Quality (eq)</a> |
           <a href="/Performance_metric">Performance Metric (met)</a> |
-          <a href="/Mental_command">Mental Command (com)</a>
+          <a href="/Mental_command">Mental Command (com)</a> |
+          <a href="/Facial_expression">Facial Expression (fac)</a>
         </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
