FEAT: ダッシュボード機能を追加し、ダッシュボードの一覧を取得するAPIを実装。カスタムダッシュボード用のSDKを作成し、関連するHTMLおよびJavaScriptを追加。

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,8 @@
           <a href="/Performance_metric">Performance Metric (met)</a> |
           <a href="/Mental_command">Mental Command (com)</a> |
           <a href="/Facial_expression">Facial Expression (fac)</a> |
-          <a href="/Records">Records</a>
+          <a href="/Records">Records</a> |
+          <a href="/dashboards">Dashboards</a>
         </p>
         <div id="status">WebSocket: connecting…</div>
         <p class="muted">トークンを有効化した場合は、ブラウザの DevTools コンソールで <code>localStorage.setItem('dashboard_token', 'YOUR_TOKEN')</code> を実行後に再読込してください。</p>
