--- a/web/Facial_expression.html
+++ b/web/Facial_expression.html
@@ -49,6 +49,41 @@
           </div>
         </div>
 
+        <div style="margin-top: 16px; background:#8881; border-radius:8px; padding:10px; color:var(--fg)">
+          <div class="row" style="justify-content: space-between; align-items: baseline">
+            <div class="small muted">Eye Actions (last <span id="eyeWinSec">60</span>s)</div>
+          </div>
+          <div style="width:100%; height: 180px;">
+            <svg id="eyeChart" width="100%" height="100%" preserveAspectRatio="none" style="display:block"></svg>
+          </div>
+          <div id="eyeLegend" class="legend" style="flex-wrap: wrap; gap:10px"></div>
+          <div class="small muted" style="margin-top:6px">横軸: 時間（秒, 現在→右端） / 縦軸: 1秒あたりのイベント数</div>
+        </div>
+
+        <div style="margin-top: 12px; background:#8881; border-radius:8px; padding:10px; color:var(--fg)">
+          <div class="small muted" style="margin-bottom:6px">Eye Action Threshold (0..1000) — note: lookL/lookR share "horiEye" threshold</div>
+          <div class="row" style="gap:10px; align-items:center; flex-wrap:wrap">
+            <label class="small muted">Action</label>
+            <select id="thAction">
+              <option value="blink">blink</option>
+              <option value="winkL">winkL</option>
+              <option value="winkR">winkR</option>
+              <option value="lookL">lookL</option>
+              <option value="lookR">lookR</option>
+            </select>
+            <label class="small muted">Profile (optional)</label>
+            <input id="thProfile" placeholder="profile name" style="width:160px" />
+            <label class="small muted">Value</label>
+            <input id="thValue" type="number" min="0" max="1000" step="1" style="width:90px" placeholder="0-1000" />
+            <input id="thSlider" type="range" min="0" max="1000" step="1" style="width:220px" />
+            <button id="thGet">Get</button>
+            <button id="thSet">Set</button>
+            <button id="thRefresh">Refresh All</button>
+            <span id="thStatus" class="small muted">-</span>
+          </div>
+          <div id="thList" class="small" style="margin-top:8px; display:flex; gap:12px; flex-wrap:wrap"></div>
+        </div>
+
         <details style="margin-top: 12px">
           <summary>Raw array</summary>
           <div class="small" style="margin: 6px 0">fac array:</div>
@@ -59,4 +94,3 @@
     <script type="module" src="/Facial_expression.js"></script>
   </body>
   </html>
-
