--- a/web/Facial_expression.html
+++ b/web/Facial_expression.html
@@ -61,15 +61,25 @@
         </div>
 
         <div style="margin-top: 12px; background:#8881; border-radius:8px; padding:10px; color:var(--fg)">
-          <div class="small muted" style="margin-bottom:6px">Eye Action Threshold (0..1000) — note: lookL/lookR share "horiEye" threshold</div>
+          <div class="small muted" style="margin-bottom:6px">
+            Facial Expression Thresholds (0..1000)
+            <br/>
+            winkL/winkR share "wink" / lookL/lookR share "horiEye"
+          </div>
           <div class="row" style="gap:10px; align-items:center; flex-wrap:wrap">
             <label class="small muted">Action</label>
             <select id="thAction">
+              <!-- populated dynamically; fallback options -->
               <option value="blink">blink</option>
-              <option value="winkL">winkL</option>
-              <option value="winkR">winkR</option>
-              <option value="lookL">lookL</option>
-              <option value="lookR">lookR</option>
+              <option value="wink">wink (L/R)</option>
+              <option value="horiEye">horiEye (look L/R)</option>
+              <option value="surprise">surprise</option>
+              <option value="frown">frown</option>
+              <option value="smile">smile</option>
+              <option value="clench">clench</option>
+              <option value="laugh">laugh</option>
+              <option value="smirkLeft">smirkLeft</option>
+              <option value="smirkRight">smirkRight</option>
             </select>
             <label class="small muted">Profile (optional)</label>
             <input id="thProfile" placeholder="profile name" style="width:160px" />
@@ -78,10 +88,14 @@
             <input id="thSlider" type="range" min="0" max="1000" step="1" style="width:220px" />
             <button id="thGet">Get</button>
             <button id="thSet">Set</button>
-            <button id="thRefresh">Refresh All</button>
+            <button id="thRefresh">Probe Thresholds</button>
+            <button id="thLoadActions" title="Reload detection info">Reload Actions</button>
             <span id="thStatus" class="small muted">-</span>
           </div>
-          <div id="thList" class="small" style="margin-top:8px; display:flex; gap:12px; flex-wrap:wrap"></div>
+          <div class="small muted" style="margin-top:6px">検出可能なアクション</div>
+          <div id="feActions" class="small" style="margin-top:4px; display:flex; gap:8px; flex-wrap:wrap"></div>
+          <div class="small muted" style="margin-top:10px">しきい値 対象/値（Get が成功したもの）</div>
+          <div id="thList" class="small" style="margin-top:4px; display:flex; gap:12px; flex-wrap:wrap"></div>
         </div>
 
         <details style="margin-top: 12px">
