Add Headset ID save functionality to sleepstage dashboard
- Add headset ID input field and Save ID button to UI
- Implement localStorage save/restore for headset ID
- Update stream start calls to use saved/entered headset ID
- Match functionality with other dashboards (device_information, EEG_Quality)

--- a/web/dashboards/sleepstage/index.html
+++ b/web/dashboards/sleepstage/index.html
@@ -75,6 +75,8 @@
     </header>
     <main>
       <section class="row">
+        <input id="headsetId" placeholder="Headset ID (optional)" style="min-width: 280px" />
+        <button id="saveHeadset">Save ID</button>
         <button id="start">Start Analysis</button>
         <button id="stop">Stop Analysis</button>
         <span id="wsstatus" class="muted">WS: connecting…</span>
