LRLRダッシュボードの表示内容を更新し、lookL / lookRを"look"として統合。EYE_ROWSを"neutral"と"look"のみに変更し、関連するデータ処理を簡素化。

--- a/web/dashboards/LRLR/index.html
+++ b/web/dashboards/LRLR/index.html
@@ -34,7 +34,7 @@
           <div class="small">最新: <span id="eyeNow" class="mono">-</span></div>
         </div>
         <svg id="eyeSvg" preserveAspectRatio="none"></svg>
-        <div class="small muted" style="margin-top:6px">lookL / lookR は "look" として1列に統合表示。横軸: 時間（秒, 現在→右端）。</div>
+        <div class="small muted" style="margin-top:6px">neutral と look のみ表示（lookL / lookR は "look" として統合）。横軸: 時間（秒, 現在→右端）。</div>
       </section>
 
       <section class="card" style="margin-top:12px">
